--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -48,6 +48,8 @@ enabled = true
 # Specifies an ordered list of seed files to load during db reset.
 # Supports glob patterns relative to supabase directory: "./seeds/*.sql"
 sql_paths = [
+  "./seed/usuario-desarrollo.sql",
+  "./seed/empresas.sql"
 ]
 
 [realtime]
