--- a/package.json
+++ b/package.json
@@ -25,19 +25,19 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
-    "next": "latest",
+    "next": "^14.2.23",
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "sonner": "^1.7.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "22.10.2",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "19.0.2",
+    "@types/react": "^18.0.22",
+    "@types/react-dom": "^18.0.7",
     "postcss": "8.4.49",
     "supabase": "^2.6.8",
     "tailwind-merge": "^2.5.2",
