--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "sonner": "^1.7.2",
+    "type-fest": "^4.32.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
