--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.468.0",
     "mssql": "^11.0.1",
     "next": "^14.2.23",
@@ -34,6 +35,7 @@
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
     "react": "^18.2.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
