--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
   "dependencies": {
     "@auth/core": "^0.37.4",
     "@hookform/resolvers": "^3.10.0",
+    "@nodecfdi/cfdi-cleaner": "^2.3.1",
+    "@nodecfdi/cfdi-core": "^0.6.2",
+    "@nodecfdi/cfdi-elements": "^0.5.0",
+    "@nodecfdi/cfdiutils-common": "^2.0.1",
+    "@nodecfdi/cfdiutils-core": "^0.7.1",
+    "@nodecfdi/credentials": "^3.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -23,12 +29,15 @@
     "@radix-ui/react-toast": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@tanstack/react-table": "^8.20.6",
+    "@vilic/node-forge": "1.3.2-5",
+    "@xmldom/xmldom": "^0.9.7",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.468.0",
+    "moment": "^2.30.1",
     "mssql": "^11.0.1",
     "next": "^14.2.23",
     "next-auth": "5.0.0-beta.25",
@@ -39,8 +48,12 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "saxonjs-he": "3.0.0-beta1",
     "sonner": "^1.7.2",
+    "sw-sdk-nodejs": "^1.1.4",
+    "ts-mixer": "^6.0.4",
     "type-fest": "^4.32.0",
+    "xslt-processor": "^3.3.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
