--- a/package.json
+++ b/package.json
@@ -27,9 +27,14 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@react-email/components": "^0.0.34",
     "@tanstack/react-query": "^5.66.8",
     "@tanstack/react-table": "^8.20.6",
+    "@types/bcrypt": "^5.0.2",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "10.4.20",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -46,6 +51,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "recharts": "^2.15.1",
+    "resend": "^4.1.2",
     "sonner": "^1.7.2",
     "type-fest": "^4.32.0",
     "zod": "^3.24.1"
