--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-to-print": "^3.0.5",
     "recharts": "^2.15.1",
     "resend": "^4.1.2",
     "sonner": "^1.7.2",
